Duplicated some advantagekit classes to get logging to work. Assortment of changes to get code to run.