@@ -144,7 +144,8 @@ tasks.register("printVendordeps") {
 tasks.withType(JavaExec).configureEach {
     jvmArgs += [
             "--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED",
-            "--enable-native-access=ALL-UNNAMED"
+            "--enable-native-access=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED"
     ]
 }
 
